fixes size of button on mobile

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -722,12 +722,7 @@ body
 
                     @media only screen and (max-width: 500px)
                         {
-                            width: 50%;
-
-                            @media only screen and (max-width: 500px)
-                                {
-                                    width: 64%;
-                                }
+                            width: 75%;
                         }
                 }
             }
